# AndroidAssembly

AsmSum/app/: CMakeLists.txt  build.gradle
AsmSum/app/src/androidTest/java/com/omelina/assembly/asmsum/: ExampleInstrumentedTest.java
AsmSum/app/src/main/: AndroidManifest.xml
AsmSum/app/src/main/cpp/: multiply.s  native-lib.cpp
AsmSum/app/src/main/java/com/omelina/assembly/asmsum/: MainActivity.java
AsmSum/app/src/main/res/values/: strings.xml
AsmSum/app/src/test/java/com/omelina/assembly/asmsum/: ExampleUnitTest.java
AsmSum/gradle/wrapper/: gradle-wrapper.properties
